[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game.tscn" type="PackedScene" id=1]
[ext_resource path="res://rooms/Room.tscn" type="PackedScene" id=2]
[ext_resource path="res://rooms/testing/closing_doors/closing_door_enemy_arena.gd" type="Script" id=3]
[ext_resource path="res://environment/closing_door/ClosingDoor.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 240, 90 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.99997, 96 )

[node name="ClosingDoorEnemyArenaDemo" instance=ExtResource( 1 )]

[node name="ClosingDoorEnemyArena" parent="World/Rooms" index="0" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="Empty" parent="World/Rooms/ClosingDoorEnemyArena/TileMaps" index="0"]
tile_data = PoolIntArray( 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589850, 0, 0 )

[node name="BackgroundLarge" parent="World/Rooms/ClosingDoorEnemyArena/TileMaps" index="1"]
tile_data = PoolIntArray( 65549, 2, 0, 131085, 3, 0 )

[node name="BackgroundSmall" parent="World/Rooms/ClosingDoorEnemyArena/TileMaps" index="2"]
tile_data = PoolIntArray( 65538, 65, 0, 65539, 1, 0, 65540, 65, 0, 65548, 89, 0, 65549, 90, 0, 65550, 91, 0, 65551, 87, 0, 65552, 88, 0, 131074, 65, 0, 131075, 1, 0, 131076, 65, 0, 196610, 66, 0, 196611, 2, 0, 196612, 65, 0, 262148, 66, 0, 589848, 26, 0, 589849, 27, 0 )

[node name="Platforms" parent="World/Rooms/ClosingDoorEnemyArena/TileMaps" index="3"]
tile_data = PoolIntArray( -65538, 48, 0, -65537, 48, 0, -131072, 48, 0, -131071, 48, 0, -131070, 48, 0, -131069, 48, 0, -131068, 48, 0, -131067, 48, 0, -131066, 48, 0, -131065, 48, 0, -131064, 48, 0, -131063, 48, 0, -131062, 48, 0, -131061, 48, 0, -131060, 48, 0, -131059, 48, 0, -131058, 48, 0, -131057, 48, 0, -131056, 48, 0, -131055, 48, 0, -131054, 48, 0, -131053, 48, 0, -131052, 48, 0, -131051, 48, 0, -131050, 48, 0, -131049, 48, 0, -131048, 48, 0, -131047, 48, 0, -131046, 48, 0, -131045, 48, 0, -131044, 48, 0, -131043, 48, 0, -131042, 48, 0, -131041, 48, 0, -2, 48, 0, -1, 28, 0, -65536, 28, 0, -65535, 28, 0, -65534, 28, 0, -65533, 28, 0, -65532, 28, 0, -65531, 28, 0, -65530, 28, 0, -65529, 28, 0, -65528, 28, 0, -65527, 28, 0, -65526, 28, 0, -65525, 28, 0, -65524, 28, 0, -65523, 28, 0, -65522, 28, 0, -65521, 28, 0, -65520, 28, 0, -65519, 28, 0, -65518, 28, 0, -65517, 28, 0, -65516, 28, 0, -65515, 28, 0, -65514, 28, 0, -65513, 28, 0, -65512, 28, 0, -65511, 28, 0, -65510, 28, 0, -65509, 28, 0, -65508, 28, 0, -65507, 28, 0, -65506, 28, 0, -65505, 48, 0, 65534, 48, 0, 65535, 28, 0, 0, 28, 0, 1, 28, 0, 2, 28, 0, 3, 28, 0, 4, 28, 0, 5, 28, 0, 6, 28, 0, 7, 28, 0, 8, 28, 0, 9, 28, 0, 10, 28, 0, 11, 28, 0, 12, 28, 0, 13, 28, 0, 14, 28, 0, 15, 28, 0, 16, 28, 0, 17, 28, 0, 18, 28, 0, 19, 28, 0, 20, 28, 0, 21, 28, 0, 22, 28, 0, 23, 28, 0, 24, 28, 0, 25, 28, 0, 26, 28, 0, 27, 28, 0, 28, 28, 0, 29, 28, 0, 30, 28, 0, 31, 48, 0, 131070, 48, 0, 131071, 28, 0, 65536, 28, 0, 65537, 33, 0, 65541, 48, 0, 65542, 48, 0, 65543, 48, 0, 65544, 48, 0, 65545, 34, 0, 65546, 28, 0, 65547, 33, 0, 65553, 48, 0, 65554, 48, 0, 65555, 48, 0, 65556, 48, 0, 65557, 48, 0, 65558, 48, 0, 65559, 48, 0, 65560, 48, 0, 65561, 48, 0, 65564, 34, 0, 65565, 28, 0, 65566, 28, 0, 65567, 48, 0, 196606, 48, 0, 196607, 28, 0, 131072, 28, 0, 131073, 36, 0, 131077, 48, 0, 131078, 48, 0, 131079, 48, 0, 131080, 48, 0, 131081, 35, 0, 131082, 28, 0, 131083, 36, 0, 131084, 48, 0, 131085, 48, 0, 131086, 48, 0, 131087, 48, 0, 131088, 48, 0, 131089, 48, 0, 131090, 48, 0, 131091, 48, 0, 131092, 48, 0, 131093, 48, 0, 131094, 48, 0, 131095, 48, 0, 131096, 48, 0, 131097, 48, 0, 131100, 35, 0, 131101, 28, 0, 131102, 28, 0, 131103, 48, 0, 262142, 48, 0, 262143, 28, 0, 196608, 28, 0, 196609, 48, 0, 196613, 48, 0, 196614, 48, 0, 196615, 48, 0, 196616, 48, 0, 196617, 48, 0, 196618, 28, 0, 196619, 48, 0, 196620, 48, 0, 196621, 48, 0, 196622, 48, 0, 196623, 48, 0, 196624, 48, 0, 196625, 48, 0, 196626, 48, 0, 196627, 48, 0, 196628, 48, 0, 196629, 48, 0, 196630, 48, 0, 196631, 48, 0, 196632, 48, 0, 196633, 48, 0, 196634, 48, 0, 196635, 48, 0, 196636, 48, 0, 196637, 28, 0, 196638, 28, 0, 196639, 48, 0, 327678, 48, 0, 327679, 28, 0, 262144, 28, 0, 262145, 48, 0, 262146, 48, 0, 262147, 48, 0, 262149, 48, 0, 262150, 48, 0, 262151, 48, 0, 262152, 48, 0, 262153, 48, 0, 262154, 28, 0, 262155, 48, 0, 262156, 48, 0, 262157, 48, 0, 262158, 48, 0, 262159, 48, 0, 262160, 48, 0, 262161, 48, 0, 262162, 48, 0, 262163, 48, 0, 262164, 48, 0, 262165, 48, 0, 262166, 48, 0, 262167, 48, 0, 262168, 48, 0, 262169, 48, 0, 262170, 48, 0, 262171, 48, 0, 262172, 48, 0, 262173, 28, 0, 262174, 28, 0, 262175, 48, 0, 393214, 48, 0, 393215, 28, 0, 327680, 28, 0, 327681, 48, 0, 327682, 48, 0, 327683, 48, 0, 327684, 48, 0, 327685, 48, 0, 327686, 48, 0, 327687, 48, 0, 327688, 48, 0, 327689, 48, 0, 327690, 28, 0, 327691, 48, 0, 327692, 48, 0, 327693, 48, 0, 327694, 48, 0, 327695, 48, 0, 327696, 48, 0, 327697, 48, 0, 327698, 18, 0, 327699, 18, 0, 327700, 18, 0, 327701, 18, 0, 327702, 48, 0, 327703, 48, 0, 327704, 48, 0, 327705, 48, 0, 327706, 48, 0, 327707, 48, 0, 327708, 48, 0, 327709, 28, 0, 327710, 28, 0, 327711, 48, 0, 458750, 48, 0, 458751, 28, 0, 393216, 28, 0, 393217, 48, 0, 393218, 48, 0, 393219, 48, 0, 393220, 48, 0, 393221, 48, 0, 393222, 48, 0, 393223, 48, 0, 393224, 48, 0, 393225, 48, 0, 393226, 28, 0, 393227, 48, 0, 393228, 48, 0, 393229, 48, 0, 393230, 48, 0, 393231, 48, 0, 393232, 48, 0, 393233, 48, 0, 393234, 48, 0, 393235, 48, 0, 393236, 48, 0, 393237, 48, 0, 393238, 48, 0, 393239, 48, 0, 393240, 48, 0, 393241, 48, 0, 393242, 48, 0, 393243, 48, 0, 393244, 48, 0, 393245, 28, 0, 393246, 28, 0, 393247, 48, 0, 524286, 48, 0, 524287, 28, 0, 458752, 28, 0, 458753, 48, 0, 458754, 48, 0, 458755, 48, 0, 458756, 48, 0, 458757, 48, 0, 458758, 48, 0, 458759, 48, 0, 458760, 48, 0, 458761, 48, 0, 458762, 28, 0, 458763, 48, 0, 458764, 48, 0, 458765, 48, 0, 458766, 18, 0, 458767, 18, 0, 458768, 18, 0, 458769, 48, 0, 458770, 48, 0, 458771, 48, 0, 458772, 48, 0, 458773, 48, 0, 458774, 48, 0, 458775, 18, 0, 458776, 18, 0, 458777, 18, 0, 458778, 48, 0, 458779, 48, 0, 458780, 48, 0, 458781, 28, 0, 458782, 28, 0, 458783, 48, 0, 589822, 48, 0, 589823, 28, 0, 524288, 28, 0, 524289, 48, 0, 524290, 48, 0, 524291, 48, 0, 524292, 48, 0, 524293, 48, 0, 524294, 48, 0, 524295, 48, 0, 524296, 48, 0, 524297, 48, 0, 524299, 48, 0, 524300, 48, 0, 524301, 48, 0, 524302, 48, 0, 524303, 48, 0, 524304, 48, 0, 524305, 48, 0, 524306, 48, 0, 524307, 48, 0, 524308, 48, 0, 524309, 48, 0, 524310, 48, 0, 524311, 48, 0, 524312, 48, 0, 524313, 48, 0, 524314, 48, 0, 524315, 48, 0, 524316, 23, 0, 524317, 28, 0, 524318, 28, 0, 524319, 48, 0, 655358, 48, 0, 655359, 28, 0, 589824, 28, 0, 589825, 48, 0, 589826, 48, 0, 589827, 48, 0, 589828, 48, 0, 589829, 48, 0, 589830, 48, 0, 589831, 48, 0, 589832, 48, 0, 589833, 48, 0, 589835, 48, 0, 589836, 48, 0, 589837, 48, 0, 589838, 48, 0, 589839, 48, 0, 589840, 48, 0, 589841, 48, 0, 589842, 48, 0, 589843, 48, 0, 589844, 48, 0, 589845, 48, 0, 589846, 48, 0, 589847, 48, 0, 589850, 48, 0, 589851, 23, 0, 589852, 23, 0, 589853, 28, 0, 589854, 28, 0, 589855, 48, 0, 720894, 48, 0, 720895, 28, 0, 655360, 28, 0, 655361, 28, 0, 655362, 28, 0, 655363, 28, 0, 655364, 28, 0, 655365, 28, 0, 655366, 28, 0, 655367, 28, 0, 655368, 28, 0, 655369, 28, 0, 655370, 28, 0, 655371, 28, 0, 655372, 28, 0, 655373, 28, 0, 655374, 28, 0, 655375, 28, 0, 655376, 28, 0, 655377, 28, 0, 655378, 28, 0, 655379, 28, 0, 655380, 28, 0, 655381, 28, 0, 655382, 28, 0, 655383, 28, 0, 655384, 28, 0, 655385, 28, 0, 655386, 28, 0, 655387, 28, 0, 655388, 28, 0, 655389, 28, 0, 655390, 28, 0, 655391, 48, 0, 786430, 48, 0, 786431, 28, 0, 720896, 28, 0, 720897, 28, 0, 720898, 28, 0, 720899, 28, 0, 720900, 28, 0, 720901, 28, 0, 720902, 28, 0, 720903, 28, 0, 720904, 28, 0, 720905, 28, 0, 720906, 28, 0, 720907, 28, 0, 720908, 28, 0, 720909, 28, 0, 720910, 28, 0, 720911, 28, 0, 720912, 28, 0, 720913, 28, 0, 720914, 28, 0, 720915, 28, 0, 720916, 28, 0, 720917, 28, 0, 720918, 28, 0, 720919, 28, 0, 720920, 28, 0, 720921, 28, 0, 720922, 28, 0, 720923, 28, 0, 720924, 28, 0, 720925, 28, 0, 720926, 28, 0, 720927, 48, 0, 851966, 48, 0, 851967, 48, 0, 786432, 48, 0, 786433, 48, 0, 786434, 48, 0, 786435, 48, 0, 786436, 48, 0, 786437, 48, 0, 786438, 48, 0, 786439, 48, 0, 786440, 48, 0, 786441, 48, 0, 786442, 48, 0, 786443, 48, 0, 786444, 48, 0, 786445, 48, 0, 786446, 48, 0, 786447, 48, 0, 786448, 48, 0, 786449, 48, 0, 786450, 48, 0, 786451, 48, 0, 786452, 48, 0, 786453, 48, 0, 786454, 48, 0, 786455, 48, 0, 786456, 48, 0, 786457, 48, 0, 786458, 48, 0, 786459, 48, 0, 786460, 48, 0, 786461, 48, 0, 786462, 48, 0, 786463, 48, 0 )

[node name="RoomBoundaries" parent="World/Rooms/ClosingDoorEnemyArena" index="1"]
visible = false

[node name="CollisionShape2D" parent="World/Rooms/ClosingDoorEnemyArena/RoomBoundaries" index="0"]
position = Vector2( 240, 90 )
shape = SubResource( 1 )

[node name="ClosingDoorManager" type="Node2D" parent="World/Rooms/ClosingDoorEnemyArena" index="9"]

[node name="ClosingDoor" parent="World/Rooms/ClosingDoorEnemyArena/ClosingDoorManager" index="0" instance=ExtResource( 4 )]
position = Vector2( 168, 144 )

[node name="ClosingDoorTrigger" type="Area2D" parent="World/Rooms/ClosingDoorEnemyArena/ClosingDoorManager" index="1"]
position = Vector2( 344, 80 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Rooms/ClosingDoorEnemyArena/ClosingDoorManager/ClosingDoorTrigger" index="0"]
shape = SubResource( 2 )

[node name="Player" parent="World" index="3"]
position = Vector2( 50, 160 )

[editable path="World/Rooms/ClosingDoorEnemyArena"]

[editable path="World/Rooms/ClosingDoorEnemyArena/TileMaps"]
